--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_3.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_3.xhtml
@@ -9,13 +9,16 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 ततो यथावत्कृतचौलसंस्क्रियो  
 नरेन्द्रसूनुः स्वत एव लब्धवान् ।  
 कलासु शश्वत् सकलासु कौशलं  
 गुरूपदेशस्त्वपदेशतामगात् ॥ १ ॥ वंशस्थम्
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 In due course,  
 once he had undergone  
 the *caula* ceremony  
@@ -24,17 +27,20 @@ His Majesty Kampa fast mastered all major disciplines –
 schooled by a *guru*,  
 though he had no need for schooling.
 1
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 स पञ्चबाणद्विपकेलिदीर्घिकां  
 धरानुरागद्रुमपुष्पमञ्जरीम् ।  
 नितम्बिनीनेत्रचकोरचन्द्रिका-  
 मवापदास्कन्दितशैशवां दशाम् ॥ २ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Youth suddenly succeeded childhood.  
 And his youth was  
 the lake where Kāma, as elephant, wallows;  
@@ -43,17 +49,20 @@ that was the nation’s adoration;
 the moonlight cherished by the *cakora*-like eyes  
 of heavy-hipped ladies.
 2
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 स रूपगर्वेण निरास्थदङ्घ्रिणा  
 स्मरस्य नूनं जयवैजयन्तिकाम् ।  
 न चेत् कथं तस्य तलेऽतिकोमले  
 सुलेखमालक्ष्यत मीनलाञ्छनम् ॥ ३ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Glorying in his beauty,  
 he must have trampled  
 upon Kāma’s triumphal banner.  
@@ -61,17 +70,20 @@ Why else did the perfectly formed lines
 upon his soles so soft  
 assume the shape of a fish?[^1]
 3
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अधारयद्दर्शितदेहसौष्ठवां  
 स राजसूनुस्तनुवृत्तमध्यताम् ।  
 पराक्रमत्रासितचित्तवृत्तिभि-  
 र्मृगाधिराजैरुपदीकृतामिव ॥ ४ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The slender circumference of his waist –  
 setting off his stately physique –  
 seemed to be a peace offering  
@@ -79,17 +91,20 @@ made by lions,
 kings of the jungle,  
 their hearts trembling at the thought of his might.
 4
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 विहाय मध्यं यदि लक्ष्मरेखया  
 बहिः प्रसार्येत सुधांशुमण्डलम् ।  
 दरोदितश्मश्रुकृतश्रियस्तदा  
 तदाननेन्दोरुपमानतां व्रजेत् ॥ ५ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 If its black mark were to slide down  
 from the centre to the edge,  
 then the moon might come close  
@@ -97,34 +112,40 @@ to resembling his moon-like face
 made still more endearing  
 by the beard just appearing.
 5
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अधारयद्गर्भितरक्तसन्ध्यकं  
 नृपात्मजः केशकलापमायतम् ।  
 दृढानुरागच्छुरितैर्मृगीदृशा-  
 मनुप्रविष्टं हृदयैरिवान्तरा ॥ ६ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The Prince had a majestic mane of hair  
 interlaced with *raktasandhyaka* flowers –   
 as if entwined within it  
 were the hearts of doe-eyed ladies,  
 daubed with the passion he aroused.
 6
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अथैनमासादितयौवनोदयं  
 नरेन्द्रकन्याभिरयोजयन्नृपः ।  
 घनागमः सम्भृतरत्नसम्पदं  
 वरापगाभिर्निधिमम्भसामिव ॥ ७ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 At length  
 the Sovereign wedded his son,  
 blooming with the blush of youth,  
@@ -133,34 +154,40 @@ just as the coming of the clouds weds the ocean,
 resplendent with a wealth of jewels and gems,  
 to great rivers.
 7
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अरातिवर्गोन्मथनेन विश्रुतं  
 विधातुमत्यन्तविनीतमप्यमुम् ।  
 कदाचिदर्थोल्लसितेन भूपतिः  
 स वाङ्मयेनैवमुपादिशत् सुतम् ॥ ८ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The King wished his son  
 to win fame by worsting all his enemies,  
 and to perfect his self-mastery.  
 One day he counselled him thus  
 with words rich in wisdom.
 8
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 धियः प्रकाशादुपदेशसम्भृतात्  
 तमो हि तारुण्यविजृम्भितं जनाः ।  
 समुज्झितुं तात भवन्ति पारिता-  
 स्तदेतदाकर्णयितुं त्वमर्हसि ॥ ९ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 ‘My son,  
 it is by the light of knowledge  
 fuelled by friendly advice  
@@ -169,17 +196,20 @@ that blinding darkness of budding youth.
 You would do well to heed  
 these words of mine.
 9
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 मुहुःप्रसर्पन्मदमीलितेक्षणाः  
 क्षणाधिरोहद्रजसो मलीमसाः ।  
 गजा इव स्तम्भनिरुद्धचेतसः  
 खला न गृह्णन्ति नियन्तृचोदितम् ॥ १० ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 ‘The dissolute are like rutting elephants.  
 Both are blind,  
 one with a pompous pride,  
@@ -192,18 +222,21 @@ frustrates the libertine;
 a taming post the elephant.  
 Neither gives ear to their master.
 10
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 सहस्रशस्तुङ्गतुरङ्गवीचयो  
 मदद्विपद्वीपविशेषितान्तराः ।  
 भवन्तमुग्रायुधनक्रराजयो  
 भजन्ति नित्यं बहला बलाब्धयः ॥ ११ ॥
-</p>
+</details>
 
-<p class="enpoem">
+
+<details><summary>Shankar & Venetia</summary>
+
 ‘Battalions vast as bottomless oceans –   
 high-stepping horses as white-cresting waves,  
 rutting elephants as abutting islands towering high,  
@@ -211,51 +244,60 @@ rows of savage weapons for floats of predatory crocodiles –
 stand in bands of thousands  
 ever at the ready for you.
 11
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 उपेत्य तुण्डीरमखण्डितोद्यमः  
 प्रमथ्य चम्पप्रमुखान् रणोन्मुखान् ।  
 प्रशाधि काञ्चीमनुवर्तितप्रजः  
 पतिर्निधीनामलकापुरीमिव ॥ १२ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 ‘Approach the Tuṇḍīra land  
 and finish for once and for all those warriors headed by Campa  
 hurling themselves headfirst into battle.  
 Rule Kāñcī wisely and win the love of her inhabitants –  
 just as Kubera, lord of wealth, rules Alakā.
 12
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अथाभिभूताखिलवन्यभूभृत-  
 स्तुरुष्कभङ्गस्तव नैव दुष्करः ।  
 निगीर्णशाखाशतसंवृतिः कथं  
 तरुप्रकाण्डं न दहेद्दवानलः ॥ १३ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 ‘After laying waste every one of the woodland chieftains,  
 you’ll crush the Sultan with ease.  
 Once a fierce fire has devoured  
 the countless small branches providing cover,  
 how can it fail to burn down the tree itself?’
 13
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 इतीरयित्वा विरते नरेश्वरे  
 प्रवृष्टपाथोधरसाम्यधारिणि ।  
 कृतप्रणामः शिरसा प्रतीष्टवान्  
 गुरूपदेशं गुणिनां पुरःसरः ॥ १४ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 As a cloud comes to a close after pouring forth its rain  
 so did the King after delivering his speech.  
 The Prince,  
@@ -263,17 +305,20 @@ foremost among the noble,
 prostrated before his father’s feet  
 taking to heart his hallowed words.
 14
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अथोरगाणामधिपस्य भाविनं  
 भुवो भरस्यापगमं दिनेश्वरः ।  
 निवेदयिष्यन्निव गाढरंहसा  
 रथेन पातालगुहामगाहत ॥ १५ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Then the sun –  
 wishing as it were  
 to tell Śeṣa, lord of serpents,  
@@ -281,18 +326,21 @@ that the load of the globe would soon be lightened[^3] –
 hurried in a flurry of flying chariot  
 into the cavern of Pātāla.
 15
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अथ नृपसुतः सान्ध्यं निर्माय कर्म सभां गतः  
 क्षणमिव गुरोराज्ञां राज्ञां गणाय निवेद्य सः ।  
 विमतविजयव्यग्रोत्साहान् विहाय गृहाय ता-  
 नरमत सुखी शय्यागेहे सरोजमुखीसखः ॥ १६ ॥ हरिणी
-</p>
+</details>
 
-<p class="enpoem">
+
+<details><summary>Shankar & Venetia</summary>
+
 At length, after the prayers of the near-drawing evening,  
 the Prince entered the assembly hall.  
 In an instant he told the gathered leaders to heed  
@@ -301,7 +349,7 @@ Raring to raze their rivals, he bid them head to bed,
 while he in his sleeping quarters  
 relaxed with his wives so dear, full of cheer.
 16
-</p>
+</details>
 
 
 [^1]: Kāma’s banner is emblazoned with a fish.  
