--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_5.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_5.xhtml
@@ -9,31 +9,37 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अथ स तत्र महीतलमण्डने  
 मरकताह्वयभाजि महापुरे ।  
 विरचितस्थितिरप्रतिशासनं  
 जगदशेषमरक्षदनाकुलम् ॥ १ ॥ द्रुतविलम्बितम्
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Establishing himself by and by there in Marakata,  
 a magnificent metropolis adorning Mother Earth,  
 the King governed the whole land,  
 challenged by none,  
 bringing peace to his subjects. 
 1
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 नरपतेः प्रतिहारमहीं मुहु-  
 र्विजयदन्तिमदोदकपङ्किलाम् ।  
 क्षितिभुजां भुजभूषणघट्टन-  
 प्रसृमरो मणिरेणुरशोषयत् ॥ २ ॥
-</p>
+</details>
 
-<p class="enpoem">
+
+<details><summary>Shankar & Venetia</summary>
+
 At the threshold to the Prince’s palace,  
 the jewelled dust billowing forth  
 every day  
@@ -42,35 +48,41 @@ bracelet brushing against bracelet,
 dried up the slush created by the springs of ichor  
 streaming from war elephants. 
 2
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अथ सुगन्धिहिमान् व्यजनानिलान्  
 मृगदृशः कृतचन्दनचर्चिकाः ।  
 शशिमतीश्च निशाः प्रियतां नय-  
 न्नरपतेरुदभूदृतुरूष्मलः ॥ ३ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 It was then that Grīṣma came,  
 leading the King to revel in  
 breaths of air chill and fragrant from fans,  
 doe-eyed women smeared with sandalwood,  
 nights aglint with the moon.
 3
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 नियतिनिर्मितदक्षिणदिग्वधू-  
 विरहतापनिवारणवाञ्छ‍या ।  
 अहिमभानुरहन्यहनि ध्रुवं  
 हरितमाप हिमाचलशीतलाम् ॥ ४ ॥
-</p>
+</details>
 
-<p class="enpoem">
+
+<details><summary>Shankar & Venetia</summary>
+
 Forcibly parted from his sweetheart the South  
 by destiny’s decree,  
 and longing to allay his love-burn,  
@@ -80,17 +92,20 @@ the hot-rayed sun
 steered a steady course  
 for the Himālaya-cooled North.[^1]
 4
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 सरसचन्दनधारिषु मौक्तिक-  
 त्रिसरनिर्झरहारिषु सुभ्रुवाम् ।  
 कुचतटेषु निदाघनिपीडितो  
 धृतिमगात् कुसुमायुधकुञ्जरः ।। ५ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The formidable elephant that was the flower-arrowed Kāma,  
 scorched by the summer heat  
 found relief upon the slopes of beautiful women’s breasts,  
@@ -98,18 +113,21 @@ home to refreshing sandal
 and entrancing rivulets  
 trickling down in pearl-string triplets.
 5
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 सलिलकेलिकुतूहलकुन्तली-  
 कुचतटाहतिजातभयैरिव ।  
 अपसृतैरजनि प्रतिवासरं  
 नृपतिगेहविहारसरोजलैः ॥ ६ ॥
-</p>
+</details>
 
-<p class="enpoem">
+
+<details><summary>Shankar & Venetia</summary>
+
 Every day  
 the waters of the palaces’ lakes  
 shrank a little further away  
@@ -117,17 +135,20 @@ beaten into terror by the sloping breasts
 of the ladies of that land  
 larking about lithely as they bathed.
 6
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अथ दलन्निचुलद्रुममञ्जरी-  
 निचयदर्शितचामरविभ्रमः ।  
 कृतनुतिः किल चातकयाचकै-  
 र्नृपतिमन्वगमज्जलदागमः ॥ ७ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Then came the coming of the rains,  
 impersonating the King:  
 *camara* 
@@ -136,134 +157,158 @@ into clusters bursting;
 suppliants in the *cātaka* birds,  
 words of praise ever singing.[^2]
 7
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 स्फुटतटित्तपनीयगुणोज्ज्वलैः  
 पृथुपयःकणमौक्तिकसङ्गिभिः ।  
 अलिकदम्बकसच्छविभिर्दिशा-  
 मसितकञ्चुलिकायितमम्बुदैः ॥ ८ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The directions wore a dark blouse  
 made of bee-black clouds  
 aglitter with a golden lacework of lightning,  
 and studded with pearls formed of rounded rain drops.
 8
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 हरितलोहितपाण्डुरराजत  
 त्रिदशराजशरासनलेखिका ।  
 मरकतोपलविद्रुममौक्तिकै-  
 र्विरचिता रशनेव नभःश्रियः ॥ ९ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 A sleek streak of rainbow  
 gleaming green, red and white  
 seemed to be the sky’s girdle-string,  
 embroidered with emerald, coral and pearl.
 9
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 रुधिरबिन्दुनिभच्छविरन्वगात्  
 क्षितितले हरिगोपपरम्परा ।  
 घनघरट्टपरस्परघट्टन-  
 क्षरदिरम्मदवह्निकणावलिम् ॥ १० ॥
-</p>
+</details>
 
-<p class="enpoem">
+
+<details><summary>Shankar & Venetia</summary>
+
 Innumerable *indragopas*,  
 bright red as pricks of blood,   
 seemed to be  
 a shower of lightning sparks pouring down to earth  
 as cloud ground against stone cloud.
 10
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 पटुपुरःपवनाधिगतभ्रमा  
 जलमुचः करकोपलकैतवात् ।  
 सलिलराशिपयःसहचूषिता-  
 मुदवमन्निव मौक्तिकसंहतिम् ॥ ११ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Wheeling in the wild head-winds,   
 clouds seemed to spew out,  
 disguised as dazzling hailstones,  
 a mouthful of pearls  
 sucked up when they swallowed the sea’s salt water.
 11
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 करतलैरिव गन्धवहैर्घनाः  
 प्रहितकैतकपांसुविभूतयः ।  
 स्तनितहुङ्कृतिभिर्निरकासय-  
 न्नृपतियौवतमानमहाग्रहम् ॥ १२ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Flinging the sacred ash of *ketakī* pollen  
 from gusts of wind running together to form upraised palms,  
 and roaring ‘hum’ with each thunderclap[^3],  
 the clouds exorcised the spirit of spite  
 possessing the King’s young wives.
 12
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 तदनु पद्मवनीपरिहासक-  
 स्त्रिदशनाथशरासनतस्करः ।  
 भुजगभुङ्मुखमुद्रणभौरिकः  
 समुदभूत् समयो जलदात्ययः ॥ १३ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 After that arrived Śarad –  
 clown to clusters of lotuses,   
 robber of rainbows,  
 treasurer sealing tight the talkative tongues of peacocks[^4].
 13
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 विधुतकाशसटाभरभासुरः  
 प्रकटितोरुजपारुणलोचनः ।  
 व्यघटयद् घनदन्तिघटाः स्फुर-  
 द्रविमुखः शरदागमकेसरी ॥ १४ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Arriving as a lion –  
 splendid as he shakes out his full mane of *kāśa* grass,  
 bloodshot eyes in *japā* flowers,  
 his face the effulgent sun –  
 Śarad sundered the squadrons of elephant-shaped clouds.
 14
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 जलदकालकलिस्फुरितां शनैः  
 कलुषतां प्रशमय्य कृशाः पुनः ।  
 घटयति स्म शरत् तटिनीसखी-  
 रुपनतैः कलहंसविलासिभिः ॥ १५ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Soothing bit by bit their turmoil  
 stirred up by the raging row of the monsoon,  
 Śarad re-united her friends the rivers  
@@ -271,34 +316,40 @@ grown gaunt
 with their lovers the *haṃsas*  
 newly returned.
 15
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 विकचपद्मविलोचनमात्मनो  
 मुखमवेक्षितुमात्तकुतूहला ।  
 नियतमभ्रनिचोलकगर्भतः  
 शरदकर्षदहर्पतिदर्पणम् ॥ १६ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Śarad drew her mirror,  
 the iridescent sun,  
 out of a clutch made of clouds,  
 clearly eager to admire herself  
 as the lotuses of her eyes burst into bloom.
 16
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 वनभुवः परितः पवनेरितै-  
 र्नवजपाकुसुमैः कृतदीपिकाः ।  
 प्रथममेव नृपस्य निदेशतो  
 विजयिनस्तुरगान् निरराजयन् ॥ १७ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Before the King had even given the order,  
 the forest groves all around,  
 scribing circles with oil lamps  
@@ -306,67 +357,79 @@ in the fresh *japā* flowers fluttered about by the wind,
 performed an arati ceremony[^5]  
 for his ever-victorious horses.
 17
-</p>\n\<sup\>\<a epub\:type\=\"noteref\" 
+</details>\n\<sup\>\<a epub\:type\=\"noteref\" 
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अथ नृपस्य समुत्सुकचेतसो  
 मदनकेलिकलासु विलासिनः ।  
 प्रियमिवाचरितुं समुपागमत्  
 प्रगुणयन् क्षणदास्तुहिनागमः ॥ १८ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Next in order came Hemanta,  
 lengthening the nights  
 as if to please the passion-fired King  
 who longed for lovemaking.
 18
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 हिमभरैर्विहतः कमलाकरो  
 मृदितकान्तिरभून्मृगलाञ्छनः ।  
 वदनमेव नरेन्द्रनतभ्रुवा-  
 मभजत श्रियमप्रतिशासनाम् ॥ १९ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The lotus pond was blasted by thick frost.  
 The moon was robbed of its magnificence.  
 The faces of the King’s beloveds  
 of bow-curved brows  
 alone suffered no threat to their beauty.
 19
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 विकचकुन्दकलापपरिष्क्रिया-  
 विरचितालकजालकविभ्रमम् ।  
 असमयेऽपि समौक्तिकमण्डनं  
 प्रभुरमंस्त निजं प्रमदाजनम् ॥ २० ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The Lord thought his ladies,  
 their furled curls prettily decorated  
 with bunches of budding *kunda* blooms,  
 were wearing pearls  
 in spite of the season.
 20
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 इति सुखान्युचितानि हिमागमे  
 समनुभूय मनोभवसन्निभः ।  
 शिशिरयामवतीष्वपि रागवान्  
 रमयितुं रमणीरुदयुङ्क्त सः ॥ २१ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Thus the King,  
 Love himself in human form,  
 had his fill of Hemanta’s delights.  
@@ -374,51 +437,60 @@ Lust-lit,
 he led his lovers to lovemaking  
 on Śiśira nights too.
 21
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अपदिशञ्छिशिरानिलमङ्गकैः  
 पुलकितैर्नृपतेः सविधं गतः ।  
 मदनसम्भृतघर्मपयःकणै-  
 र्भृशमलज्जत मुग्धवधूजनः ॥ २२ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 As they came to him,  
 his young wives tried to blame their goosebumped limbs  
 on the breeze blowing cold.  
 They blushed furiously  
 when trickles of sweat revealed their arousal.
 22
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 उपहरन् कुसुमानि महीरुहां  
 किसलयैः कलिताञ्जलिबन्धनः ।  
 मधुरकोकिलकूजितभाषितो  
 मधुरथैनमुपासितुमासदत् ॥ २३ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Offering him flowers from the trees,  
 raising his hands in a *namaskāra*  
 formed of fresh leaves still furled,  
 the honey-sweet singing of koels serving as hymns of praise –  
 the honeyed season of Vasanta then waited upon the King.
 23
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 उपवनेष्वगमन्नुपमेयतां  
 स्फुटरुचो नवकिंशुककुट्मलाः ।  
 मथितपान्थमृगक्षतजारुणै-  
 र्मदनकेसरिणः कुटिलैर्नखैः ॥ २४ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 In gardens and groves  
 the just blooming buds of the *kiṃśuka*  
 dazzlingly bright  
@@ -426,51 +498,60 @@ looked like the curved claws of Kāma the lion,
 red with the blood of his traveller prey  
 freshly slayed.[^6]
 24
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 चटुलषट्पदकज्जलपातिनी  
 विरुरुचे नवचम्पकमञ्जरी ।  
 प्रकटितेव हिमापगमश्रिया  
 स्मरमहोत्सवदीपपरम्परा ॥ २५ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 A row of fresh *campaka* flowers,  
 shedding soot in the skittery bees,  
 seemed to be a line of oil lamps  
 lit by the lady of Vasanta  
 to celebrate the grand festival of Kāma.
 25
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 सुतनवः फलकेषु मधूत्सवे  
 रतिपतिं परिलेखितुमुद्यताः ।  
 हृदयगोचरतामनिशं गतं  
 हरिहरात्मजमेव[^7] समालिखन् ॥ २६ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 In the festival of Vasanta,  
 his pretty wives attempted to paint Rati’s prince  
 upon their picture boards,  
 but found themselves drawing the King  
 for it was he who dwelt eternally in their hearts.
 26
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 क्षितिपतिं किल कुङ्कुममुष्टिना  
 समभिताडयितुं धियमादधौ ।  
 सपदि घर्मपयःप्रसरेण तं  
 विगलितं न विवेद वधूजनः ॥ २७ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Making up their minds  
 to fling fistfuls of fine *kuṅkuma*   
 at their lord,  
@@ -478,17 +559,20 @@ his darlings did not discern that
 the powder had become a trickle of liquid  
 the second it met their sweat-wetted hands.
 27
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 इति समुपचिताभिश्चातुरीभिर्विशेषा-  
 नृतुषु समुपलभ्यान्निर्विशन्निर्विशङ्कम् ।  
 सुतनुभिरवियोगोत्कण्ठिताभिस्तृतीयं  
 व्यतनुत पुरुषार्थं कम्पराजः कृतार्थम् ॥ २८ ॥ मालिनी
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Thus with an ease born of practice  
 King Kampa enjoyed the specialities  
 on offer in each season,  
@@ -499,7 +583,7 @@ In doing so he lent significance
 to the pursuit of pleasure,  
 the third goal of human existence.
 28
-</p>
+</details>
 
 
 [^1]: The sun travels south for half of the year and north for the other half.
