--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_9.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_9.xhtml
@@ -9,48 +9,57 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 मुक्ताफलैर्वीरकृपाणलेखा-  
 विभिन्नगन्धद्विपकुम्भमुक्तैः ।  
 रक्तारुणैस्तत्क्षणघट्टनोत्थ-  
 स्फुलिङ्गसङ्घातमतिर्वितेने ।। १ ॥ उपजातिः
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The blood-stained pearls flooding forth  
 as warriors sliced open rutting elephants’ temples  
 with sharp swords  
 seemed to be a shower of sparks  
 as iron struck bone.
 1
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 निशाचराः केचन कुञ्जराणां  
 कुम्भस्थलान्निःसृतमास्रपूरम् ।  
 निष्ठ्यूतमुक्तामणयः सहर्षं  
 चुचूषुरुत्पुष्करनालदण्डैः ॥ २ ॥
-</p>
+</details>
 
-<p class="enpoem">
+
+<details><summary>Shankar & Venetia</summary>
+
 A rabble of night-roaming *rākṣasas*,  
 inverting elephant trunks to make straws,  
 slurped with satisfied burps  
 the blood streaming from the beasts’ temples,  
 spitting out the pearls.
 2
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 जिघत्सयान्तः पतगैः प्रविष्टैः  
 प्रस्पन्दमानं कुणपं द्विपस्य ।  
 समीपमासाद्य सजीवबुद्ध्या  
 व्यसुं सतृष्णोऽपि जहौ सृगालः ॥ ३ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 A jackal came up to the corpse of an elephant,  
 but bolted,  
 though it was dead and he was ravenous –  
@@ -58,17 +67,20 @@ for the birds that had entered it searching for spoils
 were setting it ashudder  
 as if with new life.
 3
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 द्विषा सरोषेण पृषत्कवर्षै-  
 र्निषूदितः कोऽप्यमरत्वमेत्य ।  
 चकार तस्योपरि पुष्पवर्षं  
 सहर्षमुद्घोषितचाटुवादः ॥ ४ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 One man –  
 slain by an enemy soldier  
 showering arrows upon him in seething anger –  
@@ -76,17 +88,20 @@ now become immortal,
 showered flowers upon his assassin  
 singing his praises ecstatically.
 4
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 कुम्भेषु भिन्दन् नृपतिर्द्विपेन्द्रान्   
 मुक्ताफलैः शर्करिलान्तराभिः ।  
 प्रावर्तयद्रक्ततरङ्गिणीभिः  
 परःशताः संयति ताम्रपर्णीः ॥ ५ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The King,  
 tearing apart the temples of the mightiest of elephants,  
 made hundreds of Tāmraparṇī rivers flow  
@@ -94,52 +109,61 @@ all over the battlefield
 as streams of blood gushed forth  
 pebbled with pearls.
 5
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 तेन द्विपास्तोमरिणा विभिन्नाः  
 कुम्भस्थलैरुज्झितमौक्तिकौघैः ।  
 क्रौञ्चस्य जह्रुर्गुहशक्तिघात-  
 प्रकीर्णहंसप्रकरस्य शोभाम् ॥ ६ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 As his javelin rent each elephant’s temples,  
 letting loose a flood of pearls,  
 the beasts came to resemble Mount Krauñca  
 when Kumāra’s spear pierced it clean through  
 setting forth a stream of *haṃsas*.[^1]
 6
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 शूरस्तथा प्राहृत मुद्गरेण  
 शिरस्त्रवन्ति द्विषतां शिरांसि ।  
 यथा विनिर्यन्नयनानि तानि  
 मङ्क्षु न्यमाङ्क्षुः स्वशरीर एव ॥ ७ ॥
-</p>
+</details>
 
-<p class="enpoem">
+
+<details><summary>Shankar & Venetia</summary>
+
 With such force did the warrior  
 hurl his hammer upon the helmets of his foes  
 that their heads,  
 eyes bulging out,  
 sunk with a plunk into their necks.
 7
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 ततस्तुलुष्कान् युधि कान्दिशीका-  
 नालोक्य विष्फारितघोरशार्ङ्गः ।  
 कम्पक्षितीन्द्रं यवनाधिराजः  
 प्रत्यग्रहीद्वृत्र इवामरेन्द्रम् ॥ ८ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 At that moment,  
 seeing his men running helter-skelter across the battlefield,  
 the Yavana king,  
@@ -147,17 +171,20 @@ twanging his fearsome bow,
 attacked King Kampa  
 as Vṛtra did Indra, king of the gods.
 8
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 आस्फाल्यमानस्य च तेन गाढं  
 शार्ङ्गस्य मौर्वीनिनदश्चकार ।  
 चिरात् परित्यज्य तमुच्चलन्त्या  
 जयश्रियो नूपुरघोषशङ्काम् ॥ ९ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The sound from the Sultan’s bowstring  
 as he twanged it forcefully  
 seemed to be the sudden trill of anklets  
@@ -166,33 +193,39 @@ after so many years
 started from his side,   
 abandoning him.
 9
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 बाणा निरस्ता यवनेन तस्मि-  
 न्नपाङ्गपाता इव वीरलक्ष्म्याः ।  
 कम्पेश्वरेणाप्यभिपारसीकं  
 शराः कटाक्षा इव कालरात्रेः ॥ १० ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The Yavana lord’s arrows accosted the King  
 like the come-hither glances of Victory herself;  
 but those fired by Kampa assailed the Persian  
 like the menacing leer of dusky Death.
 10
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 स केरलप्राणमरुद्भुजङ्गान्  
 वन्यावनीन्द्रद्रुमदाववह्नीन् ।  
 अन्ध्रान्धकारक्षयतिग्मभासो  
 बाणानमुञ्चद्यवने नरेन्द्रः ।। ११ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Arrows that had served as  
 snakes to the vital air of the Kerala king,  
 wildfires to the flourishing tree   
@@ -201,17 +234,20 @@ suns destroying the grand dragoons of darkness,
 the Andhras –  
 such arrows did the King let loose upon the Sultan.
 11
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 क्षतानि यान्यस्य शरैः शरीरे  
 चकार वीरस्य तुलुष्कवीरः ।  
 वितेनिरे तानि नखाङ्कशङ्कां  
 जयश्रियो भोगसमुत्सुकायाः ॥ १२ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The wounds wrought  
 by the Tuluṣka warrior’s arrows  
 upon that warrior’s limbs  
@@ -220,18 +256,21 @@ the goddess of victory
 ardently awaiting their lovemaking  
 had pricked him with her sharp-tipped nails.
 12
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 उदग्रमग्रे यवनाधिभर्तुः  
 साक्षात् कलेर्मौलिमिवाशुगेन ।  
 स मङ्क्षु सार्धं जयकाङ्क्षितेन  
 ध्वाङ्क्षध्वजं ध्वंसयति स्म धन्वी ॥ १३ ॥
-</p>
+</details>
 
-<p class="enpoem">
+
+<details><summary>Shankar & Venetia</summary>
+
 In a split second  
 with a single shaft  
 did the bowman break the crow-blazoned banner  
@@ -239,17 +278,20 @@ flying high before the Yavana emperor
 as though it were the very head of Kali –  
 and with it all his hopes of victory.
 13
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अमर्षितस्याथ पृषत्कवर्षं  
 विमुञ्चतो विद्विषतः शरेण ।  
 स कार्मुकज्यामलुनात् तुलुष्क-  
 राज्यश्रियो मङ्गलसूत्रकल्पाम् ॥ १४ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 As his rival rained arrows upon him  
 in feverish fury,  
 the King severed with his own arrow  
@@ -257,66 +299,78 @@ the Turk’s bow string,
 as though it were the sacred marital chord  
 worn by the goddess of his reign.[^2]
 14
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 विहाय शार्ङ्गं धनुरिद्धरोष-  
 स्तुलुष्कवीरस्तरवारिमुग्रम् ।  
 तुरङ्गपर्याणनिबद्धवर्ध्रा-  
 विलम्बिनं सत्वरमुज्जहार ॥ १५ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The stouthearted Sultan,  
 incandescent with ire,  
 flung aside his horn-carved bow  
 and at once seized a fearsome sword  
 hanging by a strap from his saddle.
 15
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अथाग्रहीत् कम्पनृपस्तमेव  
 कौक्षेयकं कालकरालरूपम् ।  
 व्यापादनार्थं यवनेश्वरस्य  
 यः प्रेषितः प्राक् कलशोद्भवेन ॥ १६ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 King Kampa in turn took hold of that sword  
 sent to him afore by Agastya  
 to vanquish the Yavana king,  
 a blade dreadful as the dark lord of death.
 16
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 स वञ्चयंस्तत्तरवारिधारां  
 धाराविशेषप्रवणोपवाह्यः ।  
 अशातयत् तस्य शिरो निमेषा-  
 दनेन कर्णाटकुलप्रदीपः ॥ १७ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The light of the Karṇāṭas, Kampa,  
 riding his horse at a great gallop,  
 lopped off the Sultan’s head with his sword,  
 dodging his foe’s whetted blade.
 17
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 अज्ञातसेवोचितचाटुवादं  
 तुलुष्कसाम्राज्यकृताभिषेकम् ।  
 दिवौकसामप्यकृतप्रणामं  
 भूमौ सुरत्राणशिरः पपात ॥ १८ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Never had the Sultan's head sunk to sycophancy.  
 Gracing the imperial crown of the Tuluṣka Empire,  
 not once had it bowed, even before the gods.  
@@ -324,39 +378,45 @@ Down
 to the ground  
 it fell.
 18
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 च्युतेऽपि शीर्षे चलिताश्ववल्गा-  
 नियन्त्रणव्यापृतवामपाणिम् ।  
 प्रतिप्रहारप्रसृतान्यहस्तं  
 वीरः कबन्धं द्विषतोऽभ्यनन्दीत् ॥ १९ ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 The courageous king cheered his rival:  
 though the corpse’s head was rolling in the dust,  
 the left hand continued to restrain his speeding steed,  
 while the right stretched forth to settle the score.
 19
-</p>
+</details>
 
 
 
-<p class="devpoem">
+<details><summary>मूलम्</summary>
+
 प्रशान्तदावेव वनान्तलक्ष्मी-  
 र्गतोपरागा गगनस्थलीव ।  
 कलिन्दजा मर्दितकालियेव  
 दिग्दक्षिणासीत् क्षतपारसीका ॥ २० ॥
-</p>
-<p class="enpoem">
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
 Like a beautiful grove after a wildfire has finally tired,  
 like the expanse of the sky when an eclipse has passed,  
 like Yamunā, Kalinda’s daughter, once Kāliya was killed[^3] –  
 thus shone the South now that the Persian lay slain.
 20
-</p>
+</details>
 
 
 [^1]: The god Kumāra blasted a hole through this Himalayan mountain, thus creating a shortcut for *haṃsas* flying to Mount Kailāsa.
